--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,44 +1,27 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.1..3.13)
 project(abrade)
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(Threads)
+# conan
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup(TARGETS)
+include(GNUInstallDirs)
 
-# OpenSSL stuff here
-find_package(OpenSSL)
-
-if(OPENSSL_FOUND)
-  message("[+] Found OpenSSL")
-  include_directories(${OPENSSL_INCLUDE_DIR})
-endif()
-
-# BOOST stuff here
-set(BOOST_COROUTINES_NO_DEPRECATION_WARNING)
 set(Boost_USE_STATIC_LIBS        ON)
 set(Boost_USE_MULTITHREADED      ON)
 set(Boost_USE_STATIC_RUNTIME    OFF)
-add_definitions(${Boost_LIB_DIAGNOSTIC_DEFINITIONS})
-find_package(Boost COMPONENTS system date_time regex coroutine context program_options filesystem thread REQUIRED)
-
-if(Boost_FOUND)
-  message("[+] Found Boost. Include: " ${Boost_INCLUDE_DIRS}
-          " Libraries: " ${Boost_LIBRARIES})
-  include_directories(${Boost_INCLUDE_DIRS})
-endif()
-
-# For ASIO
-add_definitions(-D_WIN32_WINNT=0x0501)
 
 # Artifacts
-add_library(abradelib Options.cpp Candidate.h Generator.h Generator.cpp Action.h Options.h Query.h Scraper.h Connection.h Exception.h Exception.cpp Writer.h Controller.h Controller.cpp)
-target_compile_definitions(abradelib PUBLIC BOOST_COROUTINES_NO_DEPRECATION_WARNING=1)
+add_library(abradelib Options.cpp Candidate.h Generator.h Generator.cpp Action.h Options.h Query.h Scraper.h
+            Connection.h Exception.h Exception.cpp Writer.h Controller.h Controller.cpp)
+target_link_libraries(abradelib PUBLIC CONAN_PKG::boost CONAN_PKG::openssl)
 
 add_executable(abrade main.cpp)
 add_executable(abrade_test test_main.cpp GeneratorTest.cpp OptionsTest.cpp)
 
 # Linkage
-target_link_libraries(abrade abradelib ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(abrade_test abradelib ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(abrade abradelib)
+target_link_libraries(abrade_test abradelib)
 
 # Compiler Options
 IF (WIN32)
