--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Install build dependencies
       run: |
-        sudo apt-get install cmake gcc-9 python3-pip python3-setuptools
+        sudo apt-get install cmake gcc-9 python3 python3-pip python3-setuptools
+        python3 -m pip install --upgrade --user pip
         python3 -m pip install --upgrade --user conan conan-package-tools
         
     # Runs a set of commands using the runners shell
@@ -33,7 +34,7 @@ jobs:
       run: |
         mkdir build && cd build
         python3 -m conan install .. --build missing -g cmake
-        cmake -DCMAKE_BUILD_TYPE=Release ..
+        CC=gcc-9 CXX=g++-9 cmake -DCMAKE_BUILD_TYPE=Release ..
         make
     
     # Run tests
