--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,14 @@ jobs:
     - name: Install build dependencies
       run: |
         sudo apt-get install cmake gcc-9 python3 python3-pip python3-setuptools
-        python3 -m pip install --upgrade --user pip
-        python3 -m pip install --upgrade --user conan conan-package-tools
+        sudo python3 -m pip install --upgrade pip
+        sudo python3 -m pip install --upgrade conan conan-package-tools
         
     # Runs a set of commands using the runners shell
     - name: Build
       run: |
         mkdir build && cd build
-        python3 -m conan install .. --build missing -g cmake
+        conan install .. --build missing -g cmake
         CC=gcc-9 CXX=g++-9 cmake -DCMAKE_BUILD_TYPE=Release ..
         make
     
